--- a/src/renderer/scss/Execute.scss
+++ b/src/renderer/scss/Execute.scss
@@ -6,6 +6,14 @@
   width: 90vw;
   height: auto;
   border-radius: 0.375em;
+
+  .row {
+    margin: 4px 10px;
+  }
+
+  h6 {
+    margin: 0px;
+  }
 }
 
 .code-wrapper {
@@ -19,7 +27,7 @@
 
 .dropdown button {
   margin: 5px;
-  margin-left: 10vw;
+  margin-left: 0px;
   min-width: 5em;
 }
 
@@ -27,6 +35,16 @@
   white-space: break-spaces;
 }
 
-h6 {
-  margin-left: 10vw;
+.parameter-box {
+  h4 {
+    margin-bottom: 10px;
+  }
+  span {
+    font-size: 0.8em;
+    padding: 0px 5px;
+  }
+
+  .form-control {
+    padding: 0 0.375rem 0;
+  }
 }
